--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,11 @@
 version: '3'
 
 services:
-  lambda:
+  lambda: 
     build: .
     environment:
-      - PYTHONPATH=/var/task/src:/var/task/lib
+      - PYTHONPATH=/var/task/lambda:/var/task/lib
       - PATH=/var/task/bin:/var/task/bin/lib
-      - URL=https://www.cnn.com
     volumes:
-      - ./src/:/var/task/src/
+      - ./lambda/:/var/task/lambda/
       - ./tmp/:/tmp/
