--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,8 +8,7 @@
   },
   "dependencies": {
     "react": "^17.0.0",
-    "react-dom": "^17.0.0",
-    "react-spring": "^9.5.4"
+    "react-dom": "^17.0.0"
   },
   "devDependencies": {
     "@types/react": "^17.0.0",
